modified for JS

--- a/index.html
+++ b/index.html
@@ -2,8 +2,14 @@
 <html>
   <head>
       <title>My Website Title</title>
+      <script type="text/javascript" src="helloworld.js"></script>
   </head>
   <body>
     Hello, World!
+    <button onclick="hc();">Hello, Console</button>
+    <button onclick="hp();">Hello, Pop-Up</button>
+    <button onclick="hb();">Hello, Browser</button>
+    <p id="one"></p>
+    <button onclick="hs();">Hello, Stranger</button>
   </body>
 </html>
