--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <script type="text/javascript" src="helloworld.js"></script>
   </head>
   <body>
-    <h1 align="center">Hello, World!<h1>
+    <h1 align="center">Hello, World!</h1>
     <button onclick="hc();">Hello, Console</button>
     <button onclick="hp();">Hello, Pop-Up</button>
     <button onclick="hb();">Hello, Browser</button>
